@@ -1,4 +1,4 @@
-.\"	$NetBSD: countmail.6,v 1.9 2003/07/26 17:31:47 salo Exp $
+.\"	$NetBSD: countmail.6,v 1.10 2004/02/08 00:31:16 jsm Exp $
 .\"
 .\" Copyright (c) 1997 Matthew R. Green
 .\" All rights reserved.
