@@ -1,4 +1,4 @@
-/*	$NetBSD: extern.h,v 1.26 2004/01/27 20:27:29 jsm Exp $ */
+/*	$NetBSD: extern.h,v 1.27 2004/02/08 00:32:48 jsm Exp $ */
 
 /*
  * Copyright (c) 1983, 1993
