@@ -1,3 +1,9 @@
+2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* countmail/countmail.6, phantasia/fight.c, phantasia/io.c,
+	sail/extern.h, sail/misc.c, snake/snake/snake.c: Update from
+	NetBSD CVS.
+
 2004-01-27  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* dab/.cvsignore: New file.
